--- a/app/views/home_help_about/home.html.erb
+++ b/app/views/home_help_about/home.html.erb
@@ -1,2 +1,3 @@
-<h1>HomeHelpAbout#home</h1>
+<% provide(:title, "Home") %>
+<h1>Training App</h1>
 <p>Find me in app/views/home_help_about/home.html.erb</p>
