--- a/app/views/home_help_about/home.html.erb
+++ b/app/views/home_help_about/home.html.erb
@@ -1,3 +1,7 @@
+<div class="homepage">
+   <%= image_tag("Cross-Pattee-Heraldry.svg.png") %>
+<h2>Squaw Valley Ski Patrol</h2>
+<p>Training</p>
+<%= link_to "Sign Up", "#", class: "ui-btn ui-btn-inline ui-corner-all ui-input-btn" %>
+</div>
 
-<h1>Training App</h1>
-<p>Find me in app/views/home_help_about/home.html.erb</p>
